--- a/Practice/Wine - tuning GBC.ipynb
+++ b/Practice/Wine - tuning GBC.ipynb
@@ -265,7 +265,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because this problem is imbalanced, we'll use custom scorer for class selection. Let's classify item to class 1, if its probability is more than some `cutoff` value (we use `cutoff` = 0.3)."
+    "Because this problem is imbalanced, we'll use custom scorer for class selection. Let's classify item to class 1, if its probability is more than some `cutoff` value (we use `cutoff` = 0.3).\n",
+    "\n",
+    "Also we will use f1-score as metrics. Using 'accuracy' as metrics seems not to be so good idea because of class imbalance."
    ]
   },
   {
@@ -653,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -683,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 240,
    "metadata": {
     "collapsed": false
    },
@@ -698,7 +700,32 @@
    ],
    "source": [
     "# Best result\n",
+    "best_clf = GradientBoostingClassifier(learning_rate=0.1, n_estimators=40, max_depth=5, min_samples_split=5,\n",
+    "                                   min_samples_leaf=10, max_features=3, subsample=0.8, random_state=42)\n",
     "modelfit(best_clf, X_scaled, y, cutoff=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.92895323014131659"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = [1 if y > 0.25 else 0 for y in best_clf.predict_proba(X_scaled)[:,1]]\n",
+    "metrics.accuracy_score(y, y_pred)"
    ]
   },
   {
