--- a/Practice/Wine - tuning GBC.ipynb
+++ b/Practice/Wine - tuning GBC.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tuning Gradient Boosting Classifier"
+    "# Tuning Gradient Boosting Classifier\n",
+    "\n",
+    "In this problem we'll examine the wine quality dataset hosted on the UCI website. This data records 11 chemical properties (such as the concentrations of sugar, citric acid, alcohol, pH etc.) of thousands of red and white wines from northern Portugal, as well as the quality of the wines, recorded on a scale from 1 to 10. In this problem, we will only look at the data for red wine.\n",
+    "\n",
+    "We will use gradient boosting classifier to predict wine quality."
    ]
   },
   {
