Add solution to hw1

--- a/mlcourse-open/jupyter_russian/homeworks/hw1_session3_data_analysis_pandas.ipynb
+++ b/mlcourse-open/jupyter_russian/homeworks/hw1_session3_data_analysis_pandas.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "4      0       0       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,13 +296,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>161.355612</td>\n",
+       "      <td>72.565605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>169.947895</td>\n",
+       "      <td>77.257307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            height     weight\n",
+       "gender                       \n",
+       "1       161.355612  72.565605\n",
+       "2       169.947895  77.257307"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "df.groupby('gender')[['height', 'weight']].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Логично предположить, что 1 - женщины, 2 - мужчины, т.к. у 2 средние и вес, и рост больше."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "female    45530\n",
+       "male      24470\n",
+       "Name: gender_txt, dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gender_txt'] = df['gender'].map({1: 'female', 2: 'male'})\n",
+    "df['gender_txt'].value_counts()"
    ]
   },
   {
@@ -323,13 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender_txt\n",
+       "female    0.025500\n",
+       "male      0.106375\n",
+       "Name: alco, dtype: float64"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "df.groupby('gender_txt').alco.mean()"
    ]
   },
   {
@@ -352,13 +449,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "sm = df.groupby('gender_txt').smoke.mean()\n",
+    "np.round(sm.male / sm.female)"
    ]
   },
   {
@@ -381,13 +488,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    70000.000000\n",
+       "mean        53.302850\n",
+       "std          6.754967\n",
+       "min         29.563313\n",
+       "25%         48.361396\n",
+       "50%         53.943874\n",
+       "75%         58.390144\n",
+       "max         64.922656\n",
+       "Name: age_years, dtype: float64"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "df['age_years'] = df.age/365.25\n",
+    "df.describe()['age_years']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smoke\n",
+       "1   -20.0\n",
+       "Name: age_years, dtype: float64"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(df.groupby('smoke').age_years.median().diff().dropna()*12)"
    ]
   },
   {
@@ -424,13 +571,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 156,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "df['age_years'] = df.age_years.astype(int)\n",
+    "df['age65'] = (df.age_years>=60) & (df.age_years<=64)\n",
+    "df['ap_group'] = df.ap_hi.apply(lambda x: 'low' if x < 120 else ('high' if 160 <= x < 180 else 'medium'))\n",
+    "res = df[(df.smoke == 1) & (df.age65) & (df.gender_txt == 'male')].groupby(['cholesterol', 'ap_group']).cardio.mean()\n",
+    "np.round(res[3, 'high'] / res[1, 'low'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df[(df.gender_txt == 'male') & (df.smoke == 1) & (df.age_years >= 60) & (df.age_years <= 64) \n",
+    "         & (df.ap_hi < 120) & (df.cholesterol == 1)]\n",
+    "df2 = df[(df.gender_txt == 'male') & (df.smoke == 1) & (df.age_years >= 60) & (df.age_years <= 64) \n",
+    "         & (df.ap_hi >= 160) & (df.ap_hi < 180) & (df.cholesterol == 3)]\n",
+    "np.round(df2.cardio.mean()/df1.cardio.mean())"
    ]
   },
   {
@@ -453,13 +639,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 158,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Ваш код здесь"
+    "df['bmi'] = df.weight / (df.height ** 2 / 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.bmi.median() > 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = df.groupby('gender_txt').bmi.mean()\n",
+    "res.female < res.male"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = df.groupby('cardio').bmi.mean()\n",
+    "res[0] > res[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = df[(df.cardio == 0) & (df.alco == 0)].groupby('gender_txt').bmi.mean() - 25\n",
+    "res.male < res.female"
    ]
   },
   {
@@ -491,13 +758,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 163,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Ваш код здесь"
+    "height_lower, height_upper = df.height.quantile(0.025), df.height.quantile(0.975)\n",
+    "weight_lower, weight_upper = df.weight.quantile(0.025), df.weight.quantile(0.975)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = df[(df.ap_hi < df.ap_lo) | (df.height < height_lower) | (df.height > height_upper) \n",
+    "         | (df.weight < weight_lower) | (df.weight > weight_upper)]\n",
+    "np.round(100 * len(out) / len(df))"
    ]
   }
  ],
@@ -517,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
